# Simulacion

./: .gitignore
Proyecto/: CMakeLists.txt  ChartMaker.h  Configurer.h  Entry.h  Header.h  Solve.cpp  exe  out
Proyecto/Client/: Client.h
Proyecto/Distributions/: Binomial.h  Distribution.h  Exponential.h  Geometric.h  Normal.h  Poisson.h
Proyecto/Servers/: Checkout.h  Server.h  Station.h
Proyecto/Tests/: ChiSquare.h  KolmogorovSmirnov.h
Tarea 1/: EjercicioIV.py  EjercicioIX.py  EjercicioVI.py  EjercicioVII.py
Tarea 2/: EjercicioI.py  EjercicioII.py  EjercicioIII.py  EjercicioIV.py  EjercicioIX.py  EjercicioV.cpp  EjercicioVI.py  EjercicioVIII.py  EjercicioX.py
Tarea 3/: Prueba_Corrida.py  Prueba_Digitos.py  Prueba_Numeros.py  Prueba_Poker.py  Prueba_Promedio.py  Prueba_Series.py  Prueba_Varianza.py  Pruebas_Corrida.py  Run_Continuas.py  Run_Discretas.py  in
Tarea 3/Generadores/: Generador.c  Generador.cpp  Generador.java  Generador.py  exe  (+2 more)
Tarea 4/: Generador_Grafico_Muestra_IV.py  Generador_Grafico_Muestra_VIII.py  Generador_Grafico_Muestra_XV.py  Generador_Grafico_Muestra_XVI.py  Grafico_Chi_Cuadrado.py  Poisson.py  genMues.py  poiMuestra.txt
Tarea_I/: EjercicioII.py  EjercicioIII.py  EjercicioV.py  EjercicioVIII.py
Tarea_II/: EjercicioExtra.py  EjercicioVII.py
Tarea_III/: Prueba_Corrida.py  Prueba_Numeros.py  Prueba_Promedio.py  Prueba_Varianza.py  Run_Discretas.py  parser.cpp
Tarea_IV/: Generador_Grafico_Muestra_VIII.py  Generador_Grafico_Muestra_XV.py
Tarea_V/: Configurer.h  Entry.h  Header.h  Solve.cpp  exe  main  main.cpp  out  out.csv
(+53 files in other folders)
